2006-01-14 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/gsc/GSContext.m:
	* Source/x11/XGServer.m:
	* Source/x11/XGServerWindow.m:
	* Source/x11/XWindowBuffer.m:
	* Headers/x11/XGServerWindow.h:
	Some fixes for 64bit processor support.  In particular, allow for
	bug/feature of X that 32bit data supplied in XChangeProperty must
	actually be 64bit on a 64bit machine.  The X client library discards
	the upper 32bits of each value when encoding the data to be sent to
	the server.  These changes fix WindowMaker interaction on AMD64.

2006-01-09 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/win32/WIN32Server.m: Attempt to terminate gracefully when
	a quit message is received.

2005-12-22  Adam Fedor  <fedor@gnu.org>

	* Version 0.10.2

	* Source/art/ARTContext (-beep): Removed, unused.
	* Source/xdps/NSDPSContext.m (-beep): Idem.

2005-12-20  Adam Fedor  <fedor@gnu.org>

	* Source/art/ARTContext.m ([ARTContext -beep]): Respect user setting
	of bell volume.
	* Source/x11/XGServe.m: Idem.

2005-12-16  Adam Fedor  <fedor@gnu.org>

	* configure.in: Check for Xutf8LookupString
	* Source/x11/XIMInputServer.m: Use it.

2005-12-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-titlewindow::): Use UTF8 window
	title where possible.

2005-11-20  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for winlib as well so we don't get invalid
	backend.

2005-11-19 21:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ARTContext.m (flip_bytes, byte_order)
	(-initWithContextInfo:): Detect if the server doesn't have the same
	endianness and adjust the color bitmasks if necessary.

2005-11-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-window::::): Don't use the NET WM
	window icon for Window Maker. 
	* Source/x11/XGServerWindow.m (_createNetIcon:::, _setNetWMIconFor:):
	Rewrote this methods to be prepared to use the mini window icon,
	when that gets available in back.

2005-11-16 Richard Frith-Macdonald <rfm@gnu.org>
