@@ -1,3 +1,12 @@
+2006-01-23  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Headers/cairo/CairoFaceInfo.h,
+	* Source/cairo/CairoFaceInfo.m,
+	* Source/cairo/CairoFontEnumerator.m,
+	* Source/cairo/CairoFontInfo.m:
+	Rewrite of all cairo font handling to work with exported cairo
+	functions and enumerate fonts with the font config library.
+
 2006-01-14 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/gsc/GSContext.m:
